--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   gap: 10px;
   height: 100%;
   position: fixed;
+  overflow-y: auto; /* Allow vertical scrolling */
   top: 0;
   left: 0;
   bottom: 0;
