--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   gap: 10px;
   height: 100%;
   position: fixed;
-  overflow-y: auto; /* Allow vertical scrolling */
+  overflow-y: scroll; /* Allow vertical scrolling */
   top: 0;
   left: 0;
   bottom: 0;
@@ -47,6 +47,7 @@
   .container {
     gap: 15px;
     height: 100%;
+    overflow-y: scroll; /* Allow vertical scrolling */
     padding: 10px;
   }
 
