--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,11 @@
   gap: 10px;
   height: 100%;
   position: fixed;
-  overflow-y: scroll; /* Allow vertical scrolling */
+  overflow: scroll; /* Allow vertical scrolling */
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  overflow: auto;
   background-color: white;
 }
 
@@ -46,8 +45,7 @@
 @media (max-width: 600px) {
   .container {
     gap: 15px;
-    height: 100%;
-    overflow-y: scroll; /* Allow vertical scrolling */
+    overflow: scroll; /* Allow vertical scrolling */
     padding: 10px;
   }
 
