--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .container {
   display: flex;
   flex-direction: column;
@@ -7,12 +8,13 @@
   gap: 10px;
   height: 100%;
   position: fixed;
+  scroll-behavior: smooth;
   overflow: scroll; /* Allow vertical scrolling */
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: white;
+  background-color: antiquewhite;
 }
 
 #image {
@@ -40,20 +42,23 @@
   display: inline;
   margin: 0;
 }
-body {
-  overflow-y: scroll;
-}
+
 
 /* Mobile Responsiveness */
 @media (max-width: 600px) {
+
   .container {
     gap: 15px;
-    overflow: scroll; /* Allow vertical scrolling */
-    padding: 10px;
+    background-color: antiquewhite;
+    overflow-y: scroll; /* Allow vertical scrolling */
+    padding-bottom: 10px;
+    height: auto;
+
   }
 
   #image {
-    height: 250px;
+    height: 200px;
+    
   }
 
   #title {
@@ -62,37 +67,21 @@ body {
   }
 
   #formTitle {
-    font-size: 16px;
-  }
-
-  /* Adjusting the select box width for smaller screens */
-  .MuiFormControl-root {
-    width: 100% !important;
+    font-size: 200px;
   }
 
   /* Adjusting the amount display */
   #amount {
-    font-size: 16px;
+    font-size: 20px;
     padding: 10px;
     text-align: center;
   }
   
-  /* Make form labels and titles more compact on mobile */
-  .MuiInputLabel-root {
-    font-size: 14px;
-  }
-  
-  /* Reducing the gap between form controls */
-  .MuiSelect-root, .MuiInputLabel-root {
-    font-size: 14px;
-    padding: 5px;
-  }
-  body {
-    overflow-y: scroll;
-  }
+
+
 }
 
-/* Tablet View (Optional) */
+/* Tablet View  */
 @media (max-width: 900px) {
   .container {
     gap: 20px;
@@ -111,11 +100,6 @@ body {
     font-size: 18px;
   }
 
-  #amount {
-    font-size: 18px;
-    padding: 10px;
-  }
-  body {
-    overflow-y: scroll;
-  }
+
+
 }
